<resources>
    <string name="app_name">Suguru</string>
    <string name="mnu_setup">Setup</string>
    <string name="mnu_setup_start">Start</string>
    <string name="mnu_setup_finish">Finish</string>
    <string name="vw_pencil">P</string>
    <string name="vw_group">Group</string>
    <string name="head_game_params">Game parameters</string>
    <string name="lb_rows">Rows:</string>
    <string name="lb_columns">Columns:</string>
    <string name="lb_maxvalue">Max. Value:</string>
    <string name="lb_ok">OK</string>
    <string name="mnu_reset">Reset Game</string>
    <string name="mnu_pencil">Pencil</string>
    <string name="mnu_pencil_fill">Fill</string>
    <string name="mnu_pencil_clear">Clear</string>
    <string name="hd_setup_groups">Groups</string>
    <string name="hd_setup_values">Values</string>
    <string name="msg_solved">Puzzle solved!</string>
    <string name="mnu_store">Store</string>
    <string name="head_select_difficulty">Select Difficulty</string>
    <string name="mnu_level_very_easy">Very Easy</string>
    <string name="mnu_level_easy">Easy</string>
    <string name="mnu_level_medium">Medium</string>
    <string name="mnu_level_hard">Hard</string>
    <string name="mnu_level_very_hard">Very Hard</string>
    <string name="msg_no_selection">Nothing Selected!</string>
    <string name="msg_game_stored">Game Stored!</string>
    <string name="mnu_game">Game</string>
    <string name="mnu_lib">Library</string>
    <string name="mnu_import">Import</string>
    <string name="msg_not_found">Not Found</string>
    <string name="mnu_fields">PlayFields</string>
    <string name="mnu_field_copy">Copy</string>
    <string name="mnu_field_switch">Switch</string>
    <string name="mnu_field_delete">Delete</string>
    <string name="mnu_pencil_auto">Auto adjust</string>
    <string name="mnu_select_new">New game</string>
    <string name="mnu_level_und">Just take one</string>
    <string name="mnu_change_difficulty">Change Difficulty</string>
    <string name="msg_difficulty_changed">Difficulty Changed</string>
    <string name="mnu_undo">Undo</string>
</resources>
